--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     </div>
   </header>
 
+  <!-- NEWS SECTION -->
+
   <section id="news">
     <div class="content">
       <h1>News</h1>
@@ -82,40 +84,76 @@
             <img src="./img/assets/news-cell1.jpg" alt="girl with flower bouquet">
             <div class="news-text">
               <h3>Headteacher's Roundup 15 March 2019</h3>
-              <p>What a busy week it has been! The school has been alive with purposeful activity and it wonderful to be a part of such a happy community. Some of you may have read my interview with Muddy</p>
+              <p>What a busy week it has been! The school has been alive with purposeful activity and it wonderful to be
+                a part of such a happy community. Some of you may have read my interview with Muddy</p>
               <a href="#">Read more >></a>
             </div>
           </div>
         </div>
         <div class="grid-cell gs-quarter">
-            <div class="news-container">
-                <img src="./img/assets/news-cell2.jpg" alt="pupils reading">
-                <div class="news-text">
-                  <h3>Two weeks of literacy</h3>
-                  <p>What a forthnight of literary-expanding adventures we have had at Chinthurst! With much fanfare last Monday welcomed the return of our special Chinthurst 'Book Week'. Throughout the week all the</p>
-                  <a href="#">Read more >></a>
-                </div>
-              </div>
+          <div class="news-container">
+            <img src="./img/assets/news-cell2.jpg" alt="pupils reading">
+            <div class="news-text">
+              <h3>Two weeks of literacy</h3>
+              <p>What a forthnight of literary-expanding adventures we have had at Chinthurst! With much fanfare last
+                Monday welcomed the return of our special Chinthurst 'Book Week'. Throughout the week all the</p>
+              <a href="#">Read more >></a>
+            </div>
+          </div>
         </div>
         <div class="grid-cell gs-quarter">
-            <div class="news-container">
-                <img src="./img/assets/news-cell3.jpg" alt="pupils and teachers celebrating">
-                <div class="news-text">
-                  <h3>We are winners!</h3>
-                  <p>A few weeks ago, we discovered that we were finalists in an international competition run by the David Shepherd Wildlife Association. Full of excitement, myself, Mrs Lyth and eight Chinthurst</p>
-                  <a href="#">Read more >></a>
-                </div>
-              </div>
+          <div class="news-container">
+            <img src="./img/assets/news-cell3.jpg" alt="pupils and teachers celebrating">
+            <div class="news-text">
+              <h3>We are winners!</h3>
+              <p>A few weeks ago, we discovered that we were finalists in an international competition run by the David
+                Shepherd Wildlife Association. Full of excitement, myself, Mrs Lyth and eight Chinthurst</p>
+              <a href="#">Read more >></a>
+            </div>
+          </div>
         </div>
         <div class="grid-cell gs-quarter">
-            <div class="news-container">
-                <img src="./img/assets/news-cell4.jpg" alt="pupils in costumes reading books">
-                <div class="news-text">
-                  <h3>World Book Day 2019</h3>
-                  <p>In the run up to World Book Day, the whole school got involved in Drop Everything And Read (DEAR). Each day at different times and without warning, the klaxon sounded and everyone literally dropped everything</p>
-                  <a href="#">Read more >></a>
-                </div>
+          <div class="news-container">
+            <img src="./img/assets/news-cell4.jpg" alt="pupils in costumes reading books">
+            <div class="news-text">
+              <h3>World Book Day 2019</h3>
+              <p>In the run up to World Book Day, the whole school got involved in Drop Everything And Read (DEAR). Each
+                day at different times and without warning, the klaxon sounded and everyone literally dropped everything
+              </p>
+              <a href="#">Read more >></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- MAIN SECTION -->
+
+  <section>
+    <div class="content">
+      <div class="grid hp-grid grid--gutters">
+        <div class="grid-cell gs-twothirds">
+          <h1>Headteacher's Welcome</h1>
+          <div class="ht-welcome">
+            <div class="overlay">
+              <div class="ht-message">
+                <h2>Welcome</h2>
+                <p>I am delighted to welcome you to the Chinthurst School website. For more than 110 years, Chinthurst
+                  has been educating children and preparing them for the challenges of Senior School and beyond. I am
+                  proud of the school's history and excited to be leading it through the next important phase of
+                  development as part of Reigate Grammar School family.</p>
+                <a href="#">Read more >></a>
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="grid-cell gs-third">
+            <h1>Weekly Chronicle</h1>
+            <div class="chronicle">
+              <a href="#">Issue No: 1113</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
