--- a/index.html
+++ b/index.html
@@ -149,10 +149,64 @@
           </div>
         </div>
         <div class="grid-cell gs-third">
-            <h1>Weekly Chronicle</h1>
-            <div class="chronicle">
-              <a href="#">Issue No: 1113</a>
+          <h1>Weekly Chronicle</h1>
+          <div class="chronicle">
+            <a href="#">Issue No: 1113</a>
+          </div>
+        </div>
+      </div>
+      <div class="grid hp-grid grid--gutters">
+        <div class="grid-cell gs-twothirds">
+          <h1>Life at Chinthurst</h1>
+          <div class="grid hp-grid grid--gutters chint-life">
+            <div class="grid-cell gs-third">
+              <img src="./img/assets/life@chinthurst/cell1.jpg" alt="Our Chinthurst family">
+              <h4>Our Chinthurst family<a href="#"><i class="fas fa-plus"></i></a></h4>
             </div>
+            <div class="grid-cell gs-third">
+              <img src="./img/assets/life@chinthurst/cell2.jpg" alt="Admissions">
+              <h4>Admissions<a href="#"><i class="fas fa-plus"></i></a></h4>
+            </div>
+            <div class="grid-cell gs-third">
+              <img src="./img/assets/life@chinthurst/cell3.jpg" alt="Open morning">
+              <h4>Open morning<a href="#"><i class="fas fa-plus"></i></a></h4>
+            </div>
+            <div class="grid-cell gs-third">
+              <img src="./img/assets/life@chinthurst/cell4.jpg" alt="Fees">
+              <h4>Fees<a href="#"><i class="fas fa-plus"></i></a></h4>
+            </div>
+            <div class="grid-cell gs-third">
+              <img src="./img/assets/life@chinthurst/cell5.jpg" alt="Location">
+              <h4>Location<a href="#"><i class="fas fa-plus"></i></a></h4>
+            </div>
+            <div class="grid-cell gs-third">
+              <img src="./img/assets/life@chinthurst/cell6.jpg" alt="Term dates">
+              <h4>Term dates<a href="#"><i class="fas fa-plus"></i></a></h4>
+            </div>
+          </div>
+        </div>
+        <div class="grid-cell gs-third">
+          <h1>Events</h1>
+          <div class="events">
+            <h2>March 2019</h2>
+            <ul>
+              <li>
+                <h3>Whole School Assembly</h3>
+                <p>Mar 25th, 2019 at 09:40</p>
+              </li>
+              <li>
+                <h3>Hockey: U10 & U11 v Milbourne Lodge (A)</h3>
+                <p>Mar 25th, 2019 at 09:40</p>
+              </li>
+              <li>
+                <h3>Easter Church Service</h3>
+                <p>Mar 25th, 2019 at 09:40</p>
+              </li>
+              <li>
+                <h3>Open day</h3>
+                <p>Mar 25th, 2019 at 09:40</p>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
