--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat:400,600|Open+Sans&display=swap" rel="stylesheet">
   <!-- Font Awesome-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
+  <!-- lightSlider -->
+  <link rel="stylesheet" href="css/lightslider.min.css">
 
   <!-- <link rel="canonical" href="https://www.###.com/<?php if($page!=="home") { echo "$page/"; }?><?php if($article) { echo "$article/"; } ?>"> -->
 
@@ -155,6 +157,9 @@
           </div>
         </div>
       </div>
+
+      <!-- LIFE @ CHINTHURST & EVENTS SECTION -->
+
       <div class="grid hp-grid grid--gutters">
         <div class="grid-cell gs-twothirds">
           <h1>Life at Chinthurst</h1>
@@ -189,27 +194,64 @@
           <h1>Events</h1>
           <div class="events">
             <h2>March 2019</h2>
-            <ul>
+            <div class="event-date">
+              <h3>Whole School Assembly</h3>
+              <p>Mar 25th, 2019 at 09:40</p>
+            </div>
+            <div class="event-date">
+              <h3>Hockey: U10 & U11 v Milbourne Lodge (A)</h3>
+              <p>Mar 25th, 2019 at 09:40</p>
+            </div>
+            <div class="event-date">
+              <h3>Easter Church Service</h3>
+              <p>Mar 25th, 2019 at 09:40</p>
+            </div>
+            <div class="event-date">
+              <h3>Open day</h3>
+              <p>Mar 25th, 2019 at 09:40</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- TESTIMONIAL & SOCIAL SECTION -->
+
+      <div class="grid hp-grid grid--gutters">
+        <div class="grid-cell gs-twothirds">
+          <h1>Testimonials</h1>
+          <div class="testimonials-wrapper">
+            <ul id="testimonials">
               <li>
-                <h3>Whole School Assembly</h3>
-                <p>Mar 25th, 2019 at 09:40</p>
+                <h1>"Our children grasp opportunities, challenge themselves to be the best they can be and, most
+                  importantly, have fun every single day."</h1>
+                  <p>Headteacher</p>
               </li>
               <li>
-                <h3>Hockey: U10 & U11 v Milbourne Lodge (A)</h3>
-                <p>Mar 25th, 2019 at 09:40</p>
+                <h1>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nemo ut et pariatur quas veritatis!"
+                </h1>
+                <p>A. Random-User</p>
               </li>
               <li>
-                <h3>Easter Church Service</h3>
-                <p>Mar 25th, 2019 at 09:40</p>
+                <h1>"Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident culpa possimus ipsam excepturi
+                  totam consequuntur, esse ea ad capocchiam?"</h1>
+                  <p>J. Doe</p>
               </li>
               <li>
-                <h3>Open day</h3>
-                <p>Mar 25th, 2019 at 09:40</p>
+                <h1>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus tempore nostrum aut perspiciatis,
+                  commodi modi nam."</h1>
+                  <p>A. Smith</p>
               </li>
             </ul>
           </div>
         </div>
+        <div class="grid-cell gs-third">
+          <h1>Social</h1>
+          <a class="twitter-timeline" data-height="500"
+            href="https://twitter.com/ChintSchool?ref_src=twsrc%5Etfw">Tweets by ChintSchool</a>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
       </div>
+
     </div>
   </section>
 
@@ -218,8 +260,10 @@
   </footer>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+ 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="js/vendor/lightslider.min.js"></script>
   <script>
     window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
 
