--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               <li>
                 <h1>"Our children grasp opportunities, challenge themselves to be the best they can be and, most
                   importantly, have fun every single day."</h1>
-                  <p>Headteacher</p>
+                <p>Headteacher</p>
               </li>
               <li>
                 <h1>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nemo ut et pariatur quas veritatis!"
@@ -234,12 +234,12 @@
               <li>
                 <h1>"Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident culpa possimus ipsam excepturi
                   totam consequuntur, esse ea ad capocchiam?"</h1>
-                  <p>J. Doe</p>
+                <p>J. Doe</p>
               </li>
               <li>
                 <h1>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus tempore nostrum aut perspiciatis,
                   commodi modi nam."</h1>
-                  <p>A. Smith</p>
+                <p>A. Smith</p>
               </li>
             </ul>
           </div>
@@ -251,16 +251,77 @@
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </div>
-
-    </div>
   </section>
 
+  <!-- BLUE BORDER-->
+  <div class="blue-border"></div>
   <footer>
-    <div class="content"></div>
+    <div class="content">
+      <div class="grid hp-grid">
+        <div class="grid-cell gs-quarter">
+          <div class="footer-icons">
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+          </div>
+        </div>
+        <div class="grid-cell gs-quarter">
+          <div class="footer-menu">
+            <div class="grid-cell gs-third">
+              <h5>Menu</h5>
+              <div class="footer-links">
+                <a href="#">Home</a>
+                <a href="#">About us</a>
+                <a href="#">School life</a>
+                <a href="#">News & events</a>
+                <a href="#">Galleries</a>
+                <a href="#">Contact us</a>
+              </div>
+            </div>
+            <div class="grid-cell gs-third">
+              <h5>Admissions</h5>
+              <div class="footer-links">
+                <a href="#">Admissions</a>
+                <a href="#">Open Mornings</a>
+              </div>
+            </div>
+            <div class="grid-cell gs-third">
+              <h5>Quick Links</h5>
+              <div class="footer-links">
+                <a href="#">Parents Portal</a>
+                <a href="#">Fees</a>
+                <a href="#">Facilities</a>
+                <a href="#">Privacy Notice</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="grid-cell gs-quarter">
+          <div class="footer-contact">
+            <div class="contact-title">
+              <i class="fas fa-map-marker-alt"></i>
+              <h5>Contact</h5>
+            </div>
+            <div class="address">
+              <p>Chinthurst School<br>
+                52 Tadworth st,<br>
+                Surrey,<br>
+                KT20 5QZ
+              </p>
+              <p>info@chinhurstschool.co.uk</p>
+              <p>01737 812 011</p>
+            </div>
+          </div>
+        </div>
+        <div class="grid-cell gs-quarter">
+          <div class="footer-logo"><img src="./img/assets/Chinthurst_Logo2.png" alt="Chinthurst alternative logo"></div>
+        </div>
+      </div>
+    </div>
+    <p class="credits">&copy; Copyright Chinthurst School <span id="year"></span>. A studio44 website</p>
   </footer>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
- 
+
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/vendor/lightslider.min.js"></script>
