sticky navbar implemented

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="hero-section">
-      <nav>
+      <nav id="#mainNav">
         <a href="#"><img class="logo" src="./img/assets/Chinthurst_Logo1.png" alt="Chinthurst Logo 1"></a>
         <div class="links-container">
           <ul class="menu-links links-top">
@@ -166,7 +166,7 @@
           <div class="grid hp-grid grid--gutters chint-life">
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell1.jpg" alt="Our Chinthurst family">
-              <h4>Our Chinthurst family<a href="#"><i class="fas fa-plus"></i></a></h4>
+              <h4>Our Chinthurst family<a href="#"></a><i class="fas fa-plus"></i></a></h4>
             </div>
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell2.jpg" alt="Admissions">
