corrections and font size changed to ems

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <p>of leavers will be moving on to Reigate Grammar School</p>
         </div>
         <div class="stats2">
-          <p><span style="font-size: 20px;">A record</span> number of scholarships to all senior schools in 2019</p>
+          <p><span class="record">A record</span> number of scholarships to all senior schools in 2019</p>
         </div>
       </div>
     </div>
@@ -166,27 +166,27 @@
           <div class="grid hp-grid grid--gutters chint-life">
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell1.jpg" alt="Our Chinthurst family">
-              <h4>Our Chinthurst family<a href="#"></a><i class="fas fa-plus"></i></a></h4>
+              <a href="#"><h4>Our Chinthurst family<i class="fas fa-plus"></i></h4></a>
             </div>
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell2.jpg" alt="Admissions">
-              <h4>Admissions<a href="#"><i class="fas fa-plus"></i></a></h4>
+              <a href="#"><h4>Admissions<i class="fas fa-plus"></i></h4></a>
             </div>
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell3.jpg" alt="Open morning">
-              <h4>Open morning<a href="#"><i class="fas fa-plus"></i></a></h4>
+              <a href="#"><h4>Open morning<i class="fas fa-plus"></i></h4></a>
             </div>
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell4.jpg" alt="Fees">
-              <h4>Fees<a href="#"><i class="fas fa-plus"></i></a></h4>
+              <a href="#"><h4>Fees<i class="fas fa-plus"></i></h4></a>
             </div>
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell5.jpg" alt="Location">
-              <h4>Location<a href="#"><i class="fas fa-plus"></i></a></h4>
+              <a href="#"><h4>Location<i class="fas fa-plus"></i></h4>
             </div>
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell6.jpg" alt="Term dates">
-              <h4>Term dates<a href="#"><i class="fas fa-plus"></i></a></h4>
+              <a href="#"><h4>Term dates<i class="fas fa-plus"></i></h4></a>
             </div>
           </div>
         </div>
