events section re-styled

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
           <h1>Events</h1>
           <div class="events">
             <h2>March 2019</h2>
+            <div class="event-wrapper">
             <div class="event-date">
               <h3>Whole School Assembly</h3>
               <p>Mar 25th, 2019 at 09:40</p>
@@ -210,6 +211,7 @@
               <h3>Open day</h3>
               <p>Mar 25th, 2019 at 09:40</p>
             </div>
+          </div>
           </div>
         </div>
       </div>
