first inner page implemented

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <ul class="menu-links links-bottom">
             <li><a href="#">Home</a></li>
             <li><a href="#">About us</a></li>
-            <li><a href="#">School life</a></li>
+            <li><a href="school-life.html">School life</a></li>
             <li><a href="#">Admissions</a></li>
             <li><a href="#">News & events</a></li>
             <li><a href="#">Galleries</a></li>
@@ -257,6 +257,9 @@
 
   <!-- BLUE BORDER-->
   <div class="blue-border"></div>
+
+  <!-- FOOTER -->
+
   <footer>
     <div class="content">
       <div class="grid hp-grid">
