first inner page implemented

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <header>
     <div class="hero-section">
       <nav id="#mainNav">
-        <a href="#"><img class="logo" src="./img/assets/Chinthurst_Logo1.png" alt="Chinthurst Logo 1"></a>
+        <a href="index.html"><img class="logo" src="./img/assets/Chinthurst_Logo1.png" alt="Chinthurst Logo 1"></a>
         <div class="links-container">
           <ul class="menu-links links-top">
             <li><a href="#"><i class="fas fa-search icon"></i>Search</a></li>
@@ -41,7 +41,7 @@
             <li><a href="#">Reigate Grammar School</a></li>
           </ul>
           <ul class="menu-links links-bottom">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="school-life.html">School life</a></li>
             <li><a href="#">Admissions</a></li>
