first responsive styling implemented

--- a/school-life.html
+++ b/school-life.html
@@ -102,7 +102,7 @@
   <section>
     <div class="content">
       <div class="grid hp-grid grid--gutters">
-        <div class="grid-cell gs-twothirds">
+        <div class="grid-cell gs-twothirds" id="#chint-life">
           <h1>Life at Chinthurst</h1>
           <div class="grid hp-grid grid--gutters chint-life">
             <div class="grid-cell gs-third">
@@ -142,7 +142,7 @@
             </div>
           </div>
         </div>
-        <div class="grid-cell gs-third">
+        <div class="grid-cell gs-third" id="tweets">
           <h1>Social</h1>
           <a class="twitter-timeline" data-height="500"
             href="https://twitter.com/ChintSchool?ref_src=twsrc%5Etfw">Tweets by ChintSchool</a>
@@ -159,13 +159,13 @@
   <footer>
     <div class="content">
       <div class="grid hp-grid">
-        <div class="grid-cell gs-quarter">
+        <div class="grid-cell gs-quarter" id="footer-socials">
           <div class="footer-icons">
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-facebook-f"></i></a>
           </div>
         </div>
-        <div class="grid-cell gs-quarter">
+        <div class="grid-cell gs-quarter" id="footer-menu">
           <div class="footer-menu">
             <div class="grid-cell gs-third">
               <h5>Menu</h5>
@@ -196,7 +196,7 @@
             </div>
           </div>
         </div>
-        <div class="grid-cell gs-quarter">
+        <div class="grid-cell gs-quarter" id="footer-contacts">
           <div class="footer-contact">
             <div class="contact-title">
               <i class="fas fa-map-marker-alt"></i>
@@ -213,7 +213,7 @@
             </div>
           </div>
         </div>
-        <div class="grid-cell gs-quarter">
+        <div class="grid-cell gs-quarter" id="footer-logo">
           <div class="footer-logo"><img src="./img/assets/Chinthurst_Logo2.png" alt="Chinthurst alternative logo"></div>
         </div>
       </div>
