--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
             <li><a href="#">Contact us</a></li>
           </ul>
         </div>
+        <div id="burger-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </nav>
       <div class="hero-text">
         <h1>"The atmosphere of the school is wonderful, it is like a second home for the children."</h1>
@@ -70,8 +76,6 @@
           <p><span class="record">A record</span> number of scholarships to all senior schools in 2019</p>
         </div>
       </div>
-    </div>
-    <div class="content">
     </div>
   </header>
 
@@ -166,52 +170,63 @@
           <div class="grid hp-grid grid--gutters chint-life">
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell1.jpg" alt="Our Chinthurst family">
-              <a href="#"><h4>Our Chinthurst family<i class="fas fa-plus"></i></h4></a>
+              <a href="#">
+                <h4>Our Chinthurst family<i class="fas fa-plus"></i></h4>
+              </a>
             </div>
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell2.jpg" alt="Admissions">
-              <a href="#"><h4>Admissions<i class="fas fa-plus"></i></h4></a>
+              <a href="#">
+                <h4>Admissions<i class="fas fa-plus"></i></h4>
+              </a>
             </div>
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell3.jpg" alt="Open morning">
-              <a href="#"><h4>Open morning<i class="fas fa-plus"></i></h4></a>
+              <a href="#">
+                <h4>Open morning<i class="fas fa-plus"></i></h4>
+              </a>
             </div>
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell4.jpg" alt="Fees">
-              <a href="#"><h4>Fees<i class="fas fa-plus"></i></h4></a>
+              <a href="#">
+                <h4>Fees<i class="fas fa-plus"></i></h4>
+              </a>
             </div>
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell5.jpg" alt="Location">
-              <a href="#"><h4>Location<i class="fas fa-plus"></i></h4>
+              <a href="#">
+                <h4>Location<i class="fas fa-plus"></i></h4>
             </div>
             <div class="grid-cell gs-third">
               <img src="./img/assets/life@chinthurst/cell6.jpg" alt="Term dates">
-              <a href="#"><h4>Term dates<i class="fas fa-plus"></i></h4></a>
+              <a href="#">
+                <h4>Term dates<i class="fas fa-plus"></i></h4>
+              </a>
             </div>
           </div>
         </div>
-        <div class="grid-cell gs-third">
+        <div class="grid-cell gs-third" id="events">
           <h1>Events</h1>
           <div class="events">
             <h2>March 2019</h2>
             <div class="event-wrapper">
-            <div class="event-date">
-              <h3>Whole School Assembly</h3>
-              <p>Mar 25th, 2019 at 09:40</p>
+              <div class="event-date">
+                <h3>Whole School Assembly</h3>
+                <p>Mar 25th, 2019 at 09:40</p>
+              </div>
+              <div class="event-date">
+                <h3>Hockey: U10 & U11 v Milbourne Lodge (A)</h3>
+                <p>Mar 25th, 2019 at 09:40</p>
+              </div>
+              <div class="event-date">
+                <h3>Easter Church Service</h3>
+                <p>Mar 25th, 2019 at 09:40</p>
+              </div>
+              <div class="event-date">
+                <h3>Open day</h3>
+                <p>Mar 25th, 2019 at 09:40</p>
+              </div>
             </div>
-            <div class="event-date">
-              <h3>Hockey: U10 & U11 v Milbourne Lodge (A)</h3>
-              <p>Mar 25th, 2019 at 09:40</p>
-            </div>
-            <div class="event-date">
-              <h3>Easter Church Service</h3>
-              <p>Mar 25th, 2019 at 09:40</p>
-            </div>
-            <div class="event-date">
-              <h3>Open day</h3>
-              <p>Mar 25th, 2019 at 09:40</p>
-            </div>
-          </div>
           </div>
         </div>
       </div>
@@ -246,7 +261,7 @@
             </ul>
           </div>
         </div>
-        <div class="grid-cell gs-third">
+        <div class="grid-cell gs-third" id="tweets">
           <h1>Social</h1>
           <a class="twitter-timeline" data-height="500"
             href="https://twitter.com/ChintSchool?ref_src=twsrc%5Etfw">Tweets by ChintSchool</a>
@@ -263,13 +278,13 @@
   <footer>
     <div class="content">
       <div class="grid hp-grid">
-        <div class="grid-cell gs-quarter">
+        <div class="grid-cell gs-quarter" id="footer-socials">
           <div class="footer-icons">
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-facebook-f"></i></a>
           </div>
         </div>
-        <div class="grid-cell gs-quarter">
+        <div class="grid-cell gs-quarter" id="footer-menu">
           <div class="footer-menu">
             <div class="grid-cell gs-third">
               <h5>Menu</h5>
@@ -300,7 +315,7 @@
             </div>
           </div>
         </div>
-        <div class="grid-cell gs-quarter">
+        <div class="grid-cell gs-quarter" id="footer-contacts">
           <div class="footer-contact">
             <div class="contact-title">
               <i class="fas fa-map-marker-alt"></i>
@@ -317,7 +332,7 @@
             </div>
           </div>
         </div>
-        <div class="grid-cell gs-quarter">
+        <div class="grid-cell gs-quarter" id="footer-logo">
           <div class="footer-logo"><img src="./img/assets/Chinthurst_Logo2.png" alt="Chinthurst alternative logo"></div>
         </div>
       </div>
