--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </div>
           </div>
         </div>
-        <div class="grid-cell gs-third">
+        <div class="grid-cell gs-third" id="chronicle">
           <h1>Weekly Chronicle</h1>
           <div class="chronicle">
             <a href="#">Issue No: 1113</a>
@@ -333,7 +333,7 @@
           </div>
         </div>
         <div class="grid-cell gs-quarter" id="footer-logo">
-          <div class="footer-logo"><img src="./img/assets/Chinthurst_Logo2.png" alt="Chinthurst alternative logo"></div>
+          <div class="footer-logo"><a href="index.html"><img src="./img/assets/Chinthurst_Logo2.png" alt="Chinthurst alternative logo"></a></div>
         </div>
       </div>
     </div>
