--- a/school-life.html
+++ b/school-life.html
@@ -49,6 +49,12 @@
           <li><a href="#">Contact us</a></li>
         </ul>
       </div>
+      <div id="burger-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
     </nav>
   </header>
 
@@ -102,7 +108,7 @@
   <section>
     <div class="content">
       <div class="grid hp-grid grid--gutters">
-        <div class="grid-cell gs-twothirds" id="#chint-life">
+        <div class="grid-cell gs-twothirds">
           <h1>Life at Chinthurst</h1>
           <div class="grid hp-grid grid--gutters chint-life">
             <div class="grid-cell gs-third">
@@ -111,7 +117,7 @@
                 <h4>Our Chinthurst family<i class="fas fa-plus"></i></h4>
               </a>
             </div>
-            <div class="grid-cell gs-third">
+            <div class="grid-cell gs-third chint-cell">
               <img src="./img/assets/life@chinthurst/cell2.jpg" alt="Admissions">
               <a href="#">
                 <h4>Admissions<i class="fas fa-plus"></i></h4>
@@ -214,7 +220,7 @@
           </div>
         </div>
         <div class="grid-cell gs-quarter" id="footer-logo">
-          <div class="footer-logo"><img src="./img/assets/Chinthurst_Logo2.png" alt="Chinthurst alternative logo"></div>
+          <div class="footer-logo"><a href="index.html"><img src="./img/assets/Chinthurst_Logo2.png" alt="Chinthurst alternative logo"></a></div>
         </div>
       </div>
     </div>
