--- a/school-life.html
+++ b/school-life.html
@@ -57,6 +57,23 @@
         </div>
     </nav>
   </header>
+  <div class="mobile-menu">
+      <div class="mobile-links">
+      <a href="index.html">Home</a>
+      <a href="#">About us</a>
+      <a href="school-life.html">School Life</a>
+      <a href="#">Admissions</a>
+      <a href="#">News & Events</a>
+      <a href="#">Galleries</a>
+      <a href="#">Contact us</a>
+    </div>
+    <div class="social-mobile">
+      <a href="#"><i class="far fa-envelope"></i></a>
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+    </div>
+    <div class="reigate-mobile"><a href="#"></a></div>
+  </div>
 
   <!-- SUB MENU -->
   <section>
@@ -176,9 +193,9 @@
             <div class="grid-cell gs-third">
               <h5>Menu</h5>
               <div class="footer-links">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#">About us</a>
-                <a href="#">School life</a>
+                <a href="school-life.html">School life</a>
                 <a href="#">News & events</a>
                 <a href="#">Galleries</a>
                 <a href="#">Contact us</a>
