--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <header>
     <div class="hero-section">
       <nav id="#mainNav">
-        <a href="index.html"><img class="logo" src="./img/assets/Chinthurst_Logo1.png" alt="Chinthurst Logo 1"></a>
+        <a href="index.html"><img class="logo" src="./img/assets/logos/Chinthurst_Logo1.png" alt="Chinthurst Logo 1"></a>
         <div class="links-container">
           <ul class="menu-links links-top">
             <li><a href="#"><i class="fas fa-search icon"></i>Search</a></li>
@@ -63,6 +63,7 @@
         <a href="#">About us</a>
         <a href="school-life.html">School Life</a>
         <a href="#">Admissions</a>
+        <a href="#">Parents area</a>
         <a href="#">News & Events</a>
         <a href="#">Galleries</a>
         <a href="#">Contact us</a>
@@ -83,7 +84,7 @@
         <p><strong>Next Open Day - </strong><br>Thursday 9 May 2019 at 10.30am</p>
         <a href="#">Book your visit</a>
       </div>
-      <a href="#"><img class="reigate-logo" src="./img/assets/reigate-grammar.jpg" alt="Reigate Grammar School"></a>
+      <a href="#"><img class="reigate-logo" src="./img/assets/homepage/reigate-grammar.jpg" alt="Reigate Grammar School"></a>
       <div class="sub-hero-right">
         <div class="stats1">
           <h1>60%</h1>
@@ -93,6 +94,10 @@
           <p><span class="record">A record</span> number of scholarships to all senior schools in 2019</p>
         </div>
       </div>
+    </div>
+    <div class="openday-mobile">
+      <p><strong>Next Open Day - </strong><br>Thursday 9 May 2019 at 10.30am</p>
+      <a href="#">Book your visit</a>
     </div>
   </header>
 
@@ -104,7 +109,7 @@
       <div class="grid hp-grid grid--gutters">
         <div class="grid-cell gs-quarter">
           <div class="news-container">
-            <img src="./img/assets/news-cell1.jpg" alt="girl with flower bouquet">
+            <img src="./img/assets/homepage/news-cell1.jpg" alt="girl with flower bouquet">
             <div class="news-text">
               <h3>Headteacher's Roundup 15 March 2019</h3>
               <p>What a busy week it has been! The school has been alive with purposeful activity and it wonderful to be
@@ -115,7 +120,7 @@
         </div>
         <div class="grid-cell gs-quarter">
           <div class="news-container">
-            <img src="./img/assets/news-cell2.jpg" alt="pupils reading">
+            <img src="./img/assets/homepage/news-cell2.jpg" alt="pupils reading">
             <div class="news-text">
               <h3>Two weeks of literacy</h3>
               <p>What a forthnight of literary-expanding adventures we have had at Chinthurst! With much fanfare last
@@ -126,7 +131,7 @@
         </div>
         <div class="grid-cell gs-quarter">
           <div class="news-container">
-            <img src="./img/assets/news-cell3.jpg" alt="pupils and teachers celebrating">
+            <img src="./img/assets/homepage/news-cell3.jpg" alt="pupils and teachers celebrating">
             <div class="news-text">
               <h3>We are winners!</h3>
               <p>A few weeks ago, we discovered that we were finalists in an international competition run by the David
@@ -137,7 +142,7 @@
         </div>
         <div class="grid-cell gs-quarter">
           <div class="news-container">
-            <img src="./img/assets/news-cell4.jpg" alt="pupils in costumes reading books">
+            <img src="./img/assets/homepage/news-cell4.jpg" alt="pupils in costumes reading books">
             <div class="news-text">
               <h3>World Book Day 2019</h3>
               <p>In the run up to World Book Day, the whole school got involved in Drop Everything And Read (DEAR). Each
@@ -350,7 +355,7 @@
           </div>
         </div>
         <div class="grid-cell gs-quarter" id="footer-logo">
-          <div class="footer-logo"><a href="index.html"><img src="./img/assets/Chinthurst_Logo2.png" alt="Chinthurst alternative logo"></a></div>
+          <div class="footer-logo"><a href="index.html"><img src="./img/assets/logos/Chinthurst_Logo2.png" alt="Chinthurst alternative logo"></a></div>
         </div>
       </div>
     </div>
