--- a/school-life.html
+++ b/school-life.html
@@ -31,7 +31,7 @@
   <!-- Add your site or application content here -->
   <header>
     <nav id="#mainNav" class="alt-nav">
-      <a href="index.html"><img class="logo" src="./img/assets/Chinthurst_Logo2.png" alt="Chinthurst Logo 1"></a>
+      <a href="index.html"><img class="logo" src="./img/assets/logos/Chinthurst_Logo2.png" alt="Chinthurst Logo 1"></a>
       <div class="links-container">
         <ul class="menu-links links-top">
           <li><a href="#"><i class="fas fa-search icon"></i>Search</a></li>
@@ -56,13 +56,13 @@
           <span></span>
         </div>
     </nav>
-  </header>
-  <div class="mobile-menu">
+    <div class="mobile-menu">
       <div class="mobile-links">
       <a href="index.html">Home</a>
       <a href="#">About us</a>
       <a href="school-life.html">School Life</a>
       <a href="#">Admissions</a>
+      <a href="#">Parents area</a>
       <a href="#">News & Events</a>
       <a href="#">Galleries</a>
       <a href="#">Contact us</a>
@@ -74,6 +74,8 @@
     </div>
     <div class="reigate-mobile"><a href="#"></a></div>
   </div>
+  </header>
+ 
 
   <!-- SUB MENU -->
   <section>
@@ -91,7 +93,7 @@
   <section id="sports">
     <div class="content">
         <div class="grid hp-grid grid--gutters">
-          <div class="grid-cell gs-half">
+          <div class="grid-cell gs-half" id="half-left">
             <h1>Sports</h1>
             <div class="sports-text">
             <h2>Sport at Chinthurst - Inclusion with Excellence</h2>
@@ -112,9 +114,11 @@
                 Our extra-curricular programme is very extensive with many sporting activities taking place.  We also have a coaching session on Saturday mornings, from 9 to 10 am, where all children from reception to year 6 may attend for a coaching session in the major sport for that term.</p>
           </div>
           </div>
-          <div class="grid-cell gs-half">
-            <div class="rugby-photo">
+          <div class="grid-cell gs-half" id="half-right">
+            <div class="innerpage-photo">
             <img src="./img/assets/boy-rugby.jpg" alt="Boy playing Rugby">
+            <img class="secondary-img" src="./img/assets/girls-netball-throwing.jpg" alt="Girls Netball Throwing">
+            <img class="secondary-img" src="./img/assets/boys-running.jpg" alt="Boys Running">
           </div>
           </div>
         </div>
@@ -237,7 +241,7 @@
           </div>
         </div>
         <div class="grid-cell gs-quarter" id="footer-logo">
-          <div class="footer-logo"><a href="index.html"><img src="./img/assets/Chinthurst_Logo2.png" alt="Chinthurst alternative logo"></a></div>
+          <div class="footer-logo"><a href="index.html"><img src="./img/assets/logos/Chinthurst_Logo2.png" alt="Chinthurst alternative logo"></a></div>
         </div>
       </div>
     </div>
