--- a/school-life.html
+++ b/school-life.html
@@ -116,7 +116,7 @@
           </div>
           <div class="grid-cell gs-half" id="half-right">
             <div class="innerpage-photo">
-            <img src="./img/assets/boy-rugby.jpg" alt="Boy playing Rugby">
+            <img src="./img/assets/innerpage/boy-rugby.jpg" alt="Boy playing Rugby">
             <img class="secondary-img" src="./img/assets/innerpage/girls-netball-throwing.jpg" alt="Girls Netball Throwing">
             <img class="secondary-img" src="./img/assets/innerpage/boys-running.jpg" alt="Boys Running">
           </div>
